--- a/sass/_basics.scss
+++ b/sass/_basics.scss
@@ -32,7 +32,7 @@ ol li {
 }
 .medium-header {
     font-family: 'Permanent Marker';
-    margin: 1.5rem auto 1rem;
+    margin: 5rem auto 1rem;
     font-size: 36px;
     text-align: center;
 }
@@ -67,9 +67,9 @@ ol li {
     &--wordFound {
         background-color: gold;
         clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+        border: none;
         width: 900px;
         height: 600px;
-        border: 10px solid #000;
         p {
             position: absolute;
             top: 40%;
@@ -96,7 +96,7 @@ ol li {
 }
 @media (max-width: 1100px) {
     .container {
-        margin: 0 10vw;
+        margin: 0 8vw;
     }
 }
 @media (max-width: 991px) {
@@ -119,11 +119,15 @@ ol li {
     }
 }
 @media (max-width: 575px) {
+    .container {
+        margin: 0 5vw;
+    }
     .main-header {
-        font-size: 30px;
-        margin: 0 auto 4rem auto;
+        font-size: 36px;
+        margin: 0 auto 6rem auto;
     }
     .medium-header {
+        margin: 4rem auto 1rem;
         font-size: 26px;
     }
     .main-text {
