--- a/sass/_gamePage.scss
+++ b/sass/_gamePage.scss
@@ -30,6 +30,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
     }
     &__table {
         display: flex;
@@ -43,6 +44,7 @@
                 justify-content: flex-start;
                 position: relative;
                 align-self: stretch;
+                flex-wrap: wrap;
                 &::after {
                     content: 'Tutaj przeciągnij swoje karty.';
                     position: absolute;
@@ -82,6 +84,7 @@
             } 
             &__actualCard {
                 margin-left: 6rem;
+                border: 2px solid rgba(0,0,0,0.5);
             }           
         }
     }
